--- a/task.ipynb
+++ b/task.ipynb
@@ -58,33 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "0fb8c89a",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "pythor\n"
-     ]
-    }
-   ],
-   "source": [
-    "s= 'python'\n",
-    "s= s.lower()\n",
-    "def rep(old,new):\n",
-    "    global s\n",
-    "    if old in s:\n",
-    "        s = s.replace(old,new)\n",
-    "        print(s)\n",
-    "    \n",
-    "rep('thon','thor')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 2,
    "id": "51cd401e",
    "metadata": {},
    "outputs": [
@@ -92,7 +66,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "world cars\n"
+      "world\n"
      ]
     }
    ],
@@ -100,17 +74,15 @@
     "s='World war'\n",
     "s=s.lower()\n",
     "words = s.split()\n",
-    "def repl(old,new):\n",
+    "def repl(old):\n",
     "    a=[]\n",
     "    for i in words:\n",
-    "        if i==old:\n",
-    "            a.append(new)\n",
-    "        else:\n",
+    "        if i != old:\n",
     "            a.append(i)\n",
     "    c=' '.join(a)\n",
     "    print(c)\n",
     "\n",
-    "repl('war','cars')"
+    "repl('war')"
    ]
   }
  ],
