--- a/task.ipynb
+++ b/task.ipynb
@@ -84,6 +84,27 @@
     "\n",
     "repl('war')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "579e1607",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fib_seq(n):\n",
+    "    for i in range(n):\n",
+    "        print(fibb(i))\n",
+    "\n",
+    "\n",
+    "\n",
+    "def fibb(n):\n",
+    "    if n==0: return 0\n",
+    "    if n==1: return 1\n",
+    "    return fibb(n-1) + fibb(n-2)\n",
+    "\n",
+    "fib_seq(7)"
+   ]
   }
  ],
  "metadata": {
