--- a/task.ipynb
+++ b/task.ipynb
@@ -105,6 +105,55 @@
     "\n",
     "fib_seq(7)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "aa15a5b7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Filtered data written to filtered_products.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "import csv\n",
+    "\n",
+    "# Step 1: Load JSON\n",
+    "with open(\"data.json\", \"r\", encoding=\"utf-8\") as f:\n",
+    "    data = json.load(f)\n",
+    "\n",
+    "# Step 2: Flatten\n",
+    "flattened_data = []\n",
+    "for item in data:\n",
+    "    flat_item = {\n",
+    "        \"id\": item[\"id\"],\n",
+    "        \"title\": item[\"title\"],\n",
+    "        \"price\": item[\"price\"],\n",
+    "        \"description\": item[\"description\"],\n",
+    "        \"category\": item[\"category\"],\n",
+    "        \"image\": item[\"image\"],\n",
+    "        \"rating_rate\": item[\"rating\"][\"rate\"],\n",
+    "        \"rating_count\": item[\"rating\"][\"count\"]\n",
+    "    }\n",
+    "    flattened_data.append(flat_item)\n",
+    "\n",
+    "# Step 3: Filter (Example: Only electronics)\n",
+    "filtered_data = [item for item in flattened_data if item[\"category\"] == \"electronics\"]\n",
+    "\n",
+    "# Step 4: Write to CSV\n",
+    "with open(\"filtered_products.csv\", \"w\", newline=\"\", encoding=\"utf-8\") as f:\n",
+    "    writer = csv.DictWriter(f, fieldnames=flattened_data[0].keys())\n",
+    "    writer.writeheader()\n",
+    "    writer.writerows(filtered_data)\n",
+    "\n",
+    "print(\"Filtered data written to filtered_products.csv\")\n"
+   ]
   }
  ],
  "metadata": {
